--- a/package.json
+++ b/package.json
@@ -6,23 +6,25 @@
     "start": "next start"
   },
   "dependencies": {
-    "daisyui": "^2.19.0",
-    "next": "latest",
-    "plyr-react": "^5.0.2",
+    "@bochilteam/scraper-youtube": "^5.0.0",
+    "daisyui": "^4.12.14",
+    "next": "^16.1.4",
+    "plyr-react": "^5.2.1",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-lite-youtube-embed": "^2.2.2",
-    "react-player": "^2.10.1",
-    "youtubei.js": "^1.4.3"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-lite-youtube-embed": "^2.4.0",
+    "react-player": "^2.16.0",
+    "ruhend-scraper": "^9.0.8",
+    "youtubei.js": "^16.0.1"
   },
   "devDependencies": {
-    "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.2",
-    "typescript": "4.7.2"
+    "@types/node": "^22.10.5",
+    "@types/react": "^19.0.6",
+    "@types/react-dom": "^19.0.2",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2"
   }
 }
